	* Animated GIF and multipage TIFF files now can be loaded into layers (one frame/page per layer)
	* GIF animation file exploding is now done internally in mtPaint, not Gifsicle
	* "Explode Frames" can now save frames in any suitable supported file format
	* Netpbm file formats (PBM/PGM/PPM/PAM) save/load added
	* Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
	* Filename and modified status now part of undo system
	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
	* BUGFIX - Problems with editing large images at high zoom levels are now eliminated
	* BUGFIX - Titlebar now displays new image's filename after loading layers file, as it should
	* BUGFIX - Layers list now correctly displays selected layer after loading layers file
	* BUGFIX - Loading TIFF files with X or Y mirroring doesn't cause crash
	* BUGFIX - Failed operations now do not flag image as modified

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
	* BUGFIX - Filename length in builtin file selector no longer is limited to 100 characters
	* BUGFIX - Resizing the canvas window now doesn't cause polygon marquee to slide out of place
	* BUGFIX - Polygon marquee shrunk by resizing the canvas is now redrawn properly
	* BUGFIX - Problem with message windows not responding to mouse in some cases is now eliminated

3.30	2009-2-12
